# llm-job-assistant

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
sample_data/: sample_data.txt
src/llm_job_assistant/: app.py  cli.py  core.py  ingest.py
